--- a/subfolder/index.html
+++ b/subfolder/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
 
-  <script src="import.js" type="module"></script>
+  <script src="readme.js"></script>
 
 
 </head>
